--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="SF-Pro-Display-Bold.otf">
             <string>SFProDisplay-Bold</string>
+        </array>
+        <array key="SF-Pro-Display-Regular.otf">
+            <string>SFProDisplay-Regular</string>
         </array>
         <array key="SFProText-Medium.ttf">
             <string>SFProText-Medium</string>
@@ -18,14 +21,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="148" id="nnP-fG-aiP" customClass="SendAllCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nnP-fG-aiP" id="uMJ-Qs-zhc">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XUO-dl-aCG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="86"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TOTAL AVAILABLE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8qE-nX-ICN">
                                 <rect key="frame" x="15" y="10" width="290" height="17"/>
@@ -40,17 +43,28 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="total_available"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="2345.28273 BEAM" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xSg-t8-b8s">
-                                <rect key="frame" x="15" y="37" width="185" height="17"/>
-                                <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="14"/>
-                                <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="dhU-1d-uQI">
+                                <rect key="frame" x="15" y="37" width="127" height="39"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="2345.28273 BEAM" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xSg-t8-b8s">
+                                        <rect key="frame" x="0.0" y="0.0" width="127" height="17"/>
+                                        <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="14"/>
+                                        <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 USD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZcT-bu-dHQ">
+                                        <rect key="frame" x="0.0" y="22" width="127" height="17"/>
+                                        <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P6-9T-9EC">
-                                <rect key="frame" x="220" y="18" width="100" height="36"/>
+                                <rect key="frame" x="220" y="20.5" width="100" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="gBI-OT-MC8"/>
@@ -73,14 +87,13 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="xSg-t8-b8s" firstAttribute="top" secondItem="8qE-nX-ICN" secondAttribute="bottom" constant="10" id="2L6-tz-Pfl"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="top" secondItem="XUO-dl-aCG" secondAttribute="top" constant="10" id="3TT-zO-tWO"/>
-                            <constraint firstAttribute="bottom" secondItem="xSg-t8-b8s" secondAttribute="bottom" constant="11" id="LQg-Eh-QJ0"/>
+                            <constraint firstItem="dhU-1d-uQI" firstAttribute="top" secondItem="8qE-nX-ICN" secondAttribute="bottom" constant="10" id="6pC-Ja-43t"/>
+                            <constraint firstItem="dhU-1d-uQI" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="CBJ-oz-pdW"/>
+                            <constraint firstItem="6P6-9T-9EC" firstAttribute="centerY" secondItem="dhU-1d-uQI" secondAttribute="centerY" constant="-18" id="VdJ-qb-ApT"/>
                             <constraint firstItem="8qE-nX-ICN" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="eet-0Q-IQc"/>
                             <constraint firstAttribute="trailing" secondItem="6P6-9T-9EC" secondAttribute="trailing" id="hqy-ZR-7Jl"/>
-                            <constraint firstAttribute="bottom" secondItem="6P6-9T-9EC" secondAttribute="bottom" constant="11" id="iES-cw-Sqj"/>
-                            <constraint firstItem="xSg-t8-b8s" firstAttribute="leading" secondItem="XUO-dl-aCG" secondAttribute="leading" constant="15" id="jDK-9M-z91"/>
-                            <constraint firstItem="6P6-9T-9EC" firstAttribute="leading" secondItem="xSg-t8-b8s" secondAttribute="trailing" constant="20" id="jxg-f5-ckI"/>
+                            <constraint firstAttribute="bottom" secondItem="dhU-1d-uQI" secondAttribute="bottom" constant="10" id="jVF-Qg-pRI"/>
                             <constraint firstAttribute="trailing" secondItem="8qE-nX-ICN" secondAttribute="trailing" constant="15" id="kjB-jl-zDj"/>
                         </constraints>
                     </view>
@@ -97,6 +110,7 @@
             <connections>
                 <outlet property="allButton" destination="6P6-9T-9EC" id="EXc-xn-Fyg"/>
                 <outlet property="amountLabel" destination="xSg-t8-b8s" id="Erc-Er-fc2"/>
+                <outlet property="secondAvailableLabel" destination="ZcT-bu-dHQ" id="0Xm-71-nmD"/>
                 <outlet property="titleLabel" destination="8qE-nX-ICN" id="rNA-1m-bEe"/>
             </connections>
             <point key="canvasLocation" x="97.101449275362327" y="94.754464285714278"/>
