--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionDetailCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionDetailCell.xib
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="SF-Pro-Display-Light.otf">
+            <string>SFProDisplay-Light</string>
+        </array>
         <array key="SF-Pro-Display-RegularItalic.otf">
             <string>SFProDisplay-Italic</string>
         </array>
@@ -19,14 +21,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="JSp-cb-YXw" customClass="TransactionDetailCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JSp-cb-YXw" id="nlU-c7-klL">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="198"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yio-1z-dxj">
-                        <rect key="frame" x="15" y="45" width="290" height="109.5"/>
+                        <rect key="frame" x="15" y="45" width="290" height="137.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIP-fu-pjn">
                                 <rect key="frame" x="110.5" y="40" width="69.5" height="24"/>
@@ -58,15 +60,6 @@
                                     <constraint firstItem="ubL-pw-5FK" firstAttribute="leading" secondItem="GIP-fu-pjn" secondAttribute="leading" id="kg7-UQ-Z21"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-WT-fzr">
-                                <rect key="frame" x="125" y="69" width="40.5" height="19"/>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.55000000000000004" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEyeCrossedBig" translatesAutoresizingMaskIntoConstraints="NO" id="lCf-d5-5pB">
                                 <rect key="frame" x="115" y="37" width="60" height="30"/>
                                 <constraints>
@@ -74,16 +67,34 @@
                                     <constraint firstAttribute="width" constant="60" id="czs-rF-ave"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 USD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uYk-Ni-S8g">
+                                <rect key="frame" x="10" y="69" width="270" height="17"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-WT-fzr">
+                                <rect key="frame" x="125" y="94" width="40.5" height="19"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="BoK-WT-fzr" secondAttribute="bottom" constant="21.5" id="8gk-KN-3x3"/>
                             <constraint firstItem="BoK-WT-fzr" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="Ew2-bG-7d7"/>
+                            <constraint firstAttribute="bottom" secondItem="BoK-WT-fzr" secondAttribute="bottom" constant="24.5" id="Kuy-sM-DgS"/>
                             <constraint firstItem="lCf-d5-5pB" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="MMk-Cc-D31"/>
+                            <constraint firstItem="BoK-WT-fzr" firstAttribute="top" secondItem="uYk-Ni-S8g" secondAttribute="bottom" constant="8" id="OgZ-pE-r8I"/>
                             <constraint firstItem="lCf-d5-5pB" firstAttribute="top" secondItem="yio-1z-dxj" secondAttribute="top" constant="37" id="Pvd-RO-iHs"/>
                             <constraint firstItem="GIP-fu-pjn" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="b00-e9-zMp"/>
+                            <constraint firstAttribute="trailing" secondItem="uYk-Ni-S8g" secondAttribute="trailing" constant="10" id="dIq-Q7-aDj"/>
                             <constraint firstItem="GIP-fu-pjn" firstAttribute="top" secondItem="yio-1z-dxj" secondAttribute="top" constant="40" id="iMN-oa-xJa"/>
-                            <constraint firstItem="BoK-WT-fzr" firstAttribute="top" secondItem="GIP-fu-pjn" secondAttribute="bottom" constant="5" id="noi-Ay-Rqg"/>
+                            <constraint firstItem="uYk-Ni-S8g" firstAttribute="top" secondItem="GIP-fu-pjn" secondAttribute="bottom" constant="5" id="nQj-05-VpC"/>
+                            <constraint firstItem="uYk-Ni-S8g" firstAttribute="leading" secondItem="yio-1z-dxj" secondAttribute="leading" constant="10" id="oPE-xb-Nkb"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -136,6 +147,7 @@
                 <outlet property="circleView" destination="wUI-ZL-prr" id="pAK-SC-oxZ"/>
                 <outlet property="currencyIcon" destination="5av-9X-tme" id="8hZ-5c-jVt"/>
                 <outlet property="mainView" destination="yio-1z-dxj" id="vBc-vf-TcL"/>
+                <outlet property="secondAmountLabel" destination="uYk-Ni-S8g" id="27e-P5-kmb"/>
                 <outlet property="securityIcon" destination="lCf-d5-5pB" id="4ln-pv-CyP"/>
                 <outlet property="statusLabel" destination="BoK-WT-fzr" id="umw-CO-HUV"/>
             </connections>
