--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/TransactionShareView.xib
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="SF-Pro-Display-Bold.otf">
             <string>SFProDisplay-Bold</string>
+        </array>
+        <array key="SF-Pro-Display-Light.otf">
+            <string>SFProDisplay-Light</string>
         </array>
         <array key="SF-Pro-Display-Regular.otf">
             <string>SFProDisplay-Regular</string>
@@ -71,17 +74,17 @@
                             <rect key="frame" x="0.0" y="217.5" width="374" height="70"/>
                             <subviews>
                                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TAr-9B-rWa">
-                                    <rect key="frame" x="109.5" y="20.5" width="155" height="29"/>
+                                    <rect key="frame" x="109.5" y="12.5" width="155" height="45.5"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBeam" translatesAutoresizingMaskIntoConstraints="NO" id="uP1-eZ-uBh">
-                                            <rect key="frame" x="0.0" y="3.5" width="22" height="22"/>
+                                            <rect key="frame" x="0.0" y="11.5" width="22" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="22" id="AMi-LP-7cT"/>
                                                 <constraint firstAttribute="height" constant="22" id="T93-Jj-MyX"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="RECEIVING BEAM" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Hwj-cj-pzj">
-                                            <rect key="frame" x="30" y="6.5" width="117" height="16.5"/>
+                                            <rect key="frame" x="30" y="14.5" width="117" height="16.5"/>
                                             <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
                                             <color key="textColor" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
@@ -97,17 +100,17 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iap-Xh-GxZ">
-                                    <rect key="frame" x="10" y="20.5" width="175.5" height="29"/>
+                                    <rect key="frame" x="10" y="12.5" width="175.5" height="45.5"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconBeam" translatesAutoresizingMaskIntoConstraints="NO" id="yle-NJ-oIA">
-                                            <rect key="frame" x="0.0" y="3.5" width="22" height="22"/>
+                                            <rect key="frame" x="0.0" y="11.5" width="22" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="22" id="2jw-3o-2y1"/>
                                                 <constraint firstAttribute="width" constant="22" id="YVm-L1-riZ"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="RECEIVING BEAM" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="eVK-Ws-tBD">
-                                            <rect key="frame" x="30" y="0.0" width="117" height="29"/>
+                                            <rect key="frame" x="30" y="8" width="117" height="29"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="HgL-FC-X7f"/>
                                                 <constraint firstAttribute="height" constant="29" id="r6H-P9-rPU"/>
@@ -126,7 +129,7 @@
                                     </constraints>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="eFv-yG-A7p">
-                                    <rect key="frame" x="285.5" y="20.5" width="78.5" height="29"/>
+                                    <rect key="frame" x="285.5" y="12.5" width="78.5" height="45.5"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NhW-G7-nhq">
                                             <rect key="frame" x="0.0" y="0.0" width="78.5" height="29"/>
@@ -158,6 +161,12 @@
                                                 <constraint firstAttribute="height" constant="29" id="rgq-ME-cP4"/>
                                             </constraints>
                                         </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 USD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2vR-fa-ARR">
+                                            <rect key="frame" x="37.5" y="29" width="41" height="16.5"/>
+                                            <fontDescription key="fontDescription" name="SFProDisplay-Light" family="SF Pro Display" pointSize="14"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </stackView>
                             </subviews>
@@ -349,6 +358,7 @@
                 <outlet property="mainView" destination="rVZ-DJ-puc" id="tpc-gK-FOu"/>
                 <outlet property="receiverTitleLabel" destination="SOW-dl-Eab" id="bqa-hf-cyp"/>
                 <outlet property="receiverValueLabel" destination="KMU-LA-lwH" id="4qc-la-xz8"/>
+                <outlet property="secondAmountLabel" destination="2vR-fa-ARR" id="tyC-3b-kPT"/>
                 <outlet property="senderTitleLabel" destination="mkF-XY-5f2" id="bY6-pQ-P78"/>
                 <outlet property="senderValueLabel" destination="ZsA-m5-M14" id="2A8-Xe-kKP"/>
                 <outlet property="statusIcon" destination="yle-NJ-oIA" id="lGP-vx-gb7"/>
