--- a/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Send/Cells/SendAllCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,10 +64,10 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6P6-9T-9EC">
-                                <rect key="frame" x="220" y="20.5" width="100" height="36"/>
+                                <rect key="frame" x="142" y="20.5" width="178" height="36"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="gBI-OT-MC8"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="gBI-OT-MC8"/>
                                     <constraint firstAttribute="height" constant="36" id="rGF-7y-A13"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
@@ -95,6 +95,7 @@
                             <constraint firstAttribute="trailing" secondItem="6P6-9T-9EC" secondAttribute="trailing" id="hqy-ZR-7Jl"/>
                             <constraint firstAttribute="bottom" secondItem="dhU-1d-uQI" secondAttribute="bottom" constant="10" id="jVF-Qg-pRI"/>
                             <constraint firstAttribute="trailing" secondItem="8qE-nX-ICN" secondAttribute="trailing" constant="15" id="kjB-jl-zDj"/>
+                            <constraint firstItem="6P6-9T-9EC" firstAttribute="leading" secondItem="dhU-1d-uQI" secondAttribute="trailing" id="sbi-bW-Tdl"/>
                         </constraints>
                     </view>
                 </subviews>
